Issue #1 - fixed timeline images responsiveness - pulled in Merriweather for font trial - updated spacing on carousel to look better on mobiles

--- a/EvansDiary.Web/Content/style.less
+++ b/EvansDiary.Web/Content/style.less
@@ -1,4 +1,4 @@
-﻿@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,300italic|Permanent+Marker:400|PT+Serif:400);
+﻿@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,300italic|Merriweather:400|Permanent+Marker:400|PT+Serif:400);
 @import "styling/_variables";
 
 p {
@@ -24,6 +24,14 @@ p {
   }
 }
 
+h1,h2,h3,h4,h5,h6 {
+  font-family: Merriweather;
+}
+
+.carousel-caption h4 {
+  font-family: "Open Sans", Helvetica, sans-serif;
+}
+
 h1 {
   font-size: 36px;
 
@@ -45,9 +53,21 @@ h1 {
 @media screen and (max-width: @mq-sm) {
   h4.back-light {
     font-size: 10px;
+    padding: 5px;
   }
   .carousel-indicators {
     margin-bottom: 0;
+    
+    li {
+      width: 6px;
+      height: 6px;
+      border-radius: 6px;
+    }
+
+    .active {
+      width: 8px;
+      height: 8px;
+    }
   }
   .carousel-caption {
     bottom: 5px;
